==> adam-brower/ece_1896/embedded/brain/Core/Src/Adafruit_RA8875.cpp <==
#include "Adafruit_RA8875.h"

bool Adafruit_RA8875::begin() {
    _size = RA8875_800x480;
    _width = 800;
    _height = 480;
    _rotation = 0;

    // TODO: init pins manually
      HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);

      // TODO: figure out if needed
//    pinMode(_rst, OUTPUT);
//    digitalWrite(_rst, LOW);
//    delay(100);
//    digitalWrite(_rst, HIGH);
//    delay(100);

//
//    SPI.begin();

    uint8_t x = Adafruit_RA8875::readReg(0);
    printf("x = %d\r\n", x);
    if (x != 0x75) {
		printf("DISPLAY READ REGISTER FAILED!!!! \r\n");
        return false;
    }

    Adafruit_RA8875::initialize();
    return true;
}

void Adafruit_RA8875::initialize(void) {
    Adafruit_RA8875::PLLinit();
    Adafruit_RA8875::writeReg(RA8875_SYSR, RA8875_SYSR_16BPP | RA8875_SYSR_MCU8);

    /* Timing values */
    uint8_t pixclk;
    uint8_t hsync_start;
    uint8_t hsync_pw;
    uint8_t hsync_finetune;
    uint8_t hsync_nondisp;
    uint8_t vsync_pw;
    uint16_t vsync_nondisp;
    uint16_t vsync_start;

    // (_size == RA8875_800x480)
    pixclk = RA8875_PCSR_PDATL | RA8875_PCSR_2CLK;
    hsync_nondisp = 26;
    hsync_start = 32;
    hsync_pw = 96;
    hsync_finetune = 0;
    vsync_nondisp = 32;
    vsync_start = 23;
    vsync_pw = 2;
    _voffset = 0;

    Adafruit_RA8875::writeReg(RA8875_PCSR, pixclk);
    HAL_Delay(1);

    /* Horizontal settings registers */
    Adafruit_RA8875::writeReg(RA8875_HDWR, (_width / 8) - 1); // H width: (HDWR + 1) * 8 = 480
    Adafruit_RA8875::writeReg(RA8875_HNDFTR, RA8875_HNDFTR_DE_HIGH + hsync_finetune);
    Adafruit_RA8875::writeReg(RA8875_HNDR, (hsync_nondisp - hsync_finetune - 2) /
                                                        8); // H non-display: HNDR * 8 + HNDFTR + 2 = 10
    Adafruit_RA8875::writeReg(RA8875_HSTR, hsync_start / 8 - 1); // Hsync start: (HSTR + 1)*8
    Adafruit_RA8875::writeReg(RA8875_HPWR,
                     RA8875_HPWR_LOW +
                             (hsync_pw / 8 - 1)); // HSync pulse width = (HPWR+1) * 8

    /* Vertical settings registers */
    Adafruit_RA8875::writeReg(RA8875_VDHR0, (uint16_t)(_height - 1 + _voffset) & 0xFF);
    Adafruit_RA8875::writeReg(RA8875_VDHR1, (uint16_t)(_height - 1 + _voffset) >> 8);
    Adafruit_RA8875::writeReg(RA8875_VNDR0, vsync_nondisp - 1); // V non-display period = VNDR + 1
    Adafruit_RA8875::writeReg(RA8875_VNDR1, vsync_nondisp >> 8);
    Adafruit_RA8875::writeReg(RA8875_VSTR0, vsync_start - 1); // Vsync start position = VSTR + 1
    Adafruit_RA8875::writeReg(RA8875_VSTR1, vsync_start >> 8);
    Adafruit_RA8875::writeReg(RA8875_VPWR,
                     RA8875_VPWR_LOW + vsync_pw - 1); // Vsync pulse width = VPWR + 1

    /* Set active window X */
    Adafruit_RA8875::writeReg(RA8875_HSAW0, 0); // horizontal start point
    Adafruit_RA8875::writeReg(RA8875_HSAW1, 0);
    Adafruit_RA8875::writeReg(RA8875_HEAW0, (uint16_t)(_width - 1) & 0xFF); // horizontal end point
    Adafruit_RA8875::writeReg(RA8875_HEAW1, (uint16_t)(_width - 1) >> 8);

    /* Set active window Y */
    Adafruit_RA8875::writeReg(RA8875_VSAW0, 0 + _voffset); // vertical start point
    Adafruit_RA8875::writeReg(RA8875_VSAW1, 0 + _voffset);
    Adafruit_RA8875::writeReg(RA8875_VEAW0,
                     (uint16_t)(_height - 1 + _voffset) & 0xFF); // vertical end point
    Adafruit_RA8875::writeReg(RA8875_VEAW1, (uint16_t)(_height - 1 + _voffset) >> 8);

    /* Clear the entire window */
    Adafruit_RA8875::writeReg(RA8875_MCLR, RA8875_MCLR_START | RA8875_MCLR_FULL);
    HAL_Delay(500);
}

void Adafruit_RA8875::pushPixels(uint32_t num, uint16_t p) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);

    while (num--) {
//        SPI.transfer(p >> 8);
    	uint8_t pHigh = p >> 8;
    	HAL_SPI_Transmit(&_DIS_HSPI, &pHigh, 1, HAL_MAX_DELAY);
//    	SPI.transfer(p);
    	uint8_t pLow = p&0xFF;
    	HAL_SPI_Transmit(&_DIS_HSPI, &pLow, 1, HAL_MAX_DELAY);
    }
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

void Adafruit_RA8875::drawPixel(int16_t x, int16_t y, uint16_t color) {
    x = Adafruit_RA8875::applyRotationX(x);
    y = Adafruit_RA8875::applyRotationY(y);

    Adafruit_RA8875::writeReg(RA8875_CURH0, x);
    Adafruit_RA8875::writeReg(RA8875_CURH1, x >> 8);
    Adafruit_RA8875::writeReg(RA8875_CURV0, y);
    Adafruit_RA8875::writeReg(RA8875_CURV1, y >> 8);
    Adafruit_RA8875::writeCommand(RA8875_MRWC);

    // TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);
//    SPI.transfer(color >> 8);
	uint8_t pHigh = color >> 8;
	HAL_SPI_Transmit(&_DIS_HSPI, &pHigh, 1, HAL_MAX_DELAY);
//    SPI.transfer(color);
	uint8_t pLow = color&0xFF;
	HAL_SPI_Transmit(&_DIS_HSPI, &pLow, 1, HAL_MAX_DELAY);
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

void Adafruit_RA8875::writeData(uint8_t d) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//    SPI.transfer(RA8875_DATAWRITE);
	uint8_t data2 = 0x00;
	HAL_SPI_Transmit(&_DIS_HSPI, &data2, 1, HAL_MAX_DELAY);
//    SPI.transfer(d);
	HAL_SPI_Transmit(&_DIS_HSPI, &d, 1, HAL_MAX_DELAY);
//    spi_end();
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}

uint8_t Adafruit_RA8875::readData(void) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//
//    SPI.transfer(RA8875_DATAREAD);
	 uint8_t data3 = 0x40;
	HAL_SPI_Transmit(&_DIS_HSPI, &data3, 1, HAL_MAX_DELAY);
//    uint8_t x = SPI.transfer(0x0);
	uint8_t data4 = 0x00;
	uint8_t x;
	HAL_SPI_TransmitReceive(&_DIS_HSPI, &data4, &x, 1, HAL_MAX_DELAY);
//    spi_end();
//
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
    return x;
}

void Adafruit_RA8875::writeCommand(uint8_t d) {

	// TODO: implement SPI and write functions for this
//    digitalWrite(_cs, LOW);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_RESET);
//    spi_begin();
//
//    SPI.transfer(RA8875_CMDWRITE);
    // TODO: clean this up
    uint8_t data1 = 0x80;
	HAL_SPI_Transmit(&_DIS_HSPI, &data1, 1, HAL_MAX_DELAY);
	HAL_SPI_Transmit(&_DIS_HSPI, &d, 1, HAL_MAX_DELAY);
//    SPI.transfer(d);
//    spi_end();

//
//    digitalWrite(_cs, HIGH);
	HAL_GPIO_WritePin(DIS_CS_GPIO_Port, DIS_CS_Pin, GPIO_PIN_SET);
}
